fixed css link error, added nav bar and imgs..., answered questions, added additional html files, added color to boxes,..

--- a/index.html
+++ b/index.html
@@ -2,17 +2,37 @@
 
 <html lang="en">
 <head>
+
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sprint Challenge - Home</title>
-
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="style/index.css">
 
 </head>
 
 <body>
     <div class="container">
+
+        <header>
+
+            <div class="mainLogo">
+                <img src="assets/lambda-black.png" alt="Lambda Logo, black">
+            </div>
+
+            <nav class="navBar">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+
+        </header>
+
+        <div class="mainImg">
+            <img src="assets/jumbo.jpg" alt="jumbo image">
+        </div>
    
         <section class="top-content">
             <div class="text-container">
@@ -62,12 +82,12 @@
         </section>
         
         <footer>
-            <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Products</a>
-                <a href="#">Blog</a>
-                <a href="#">Contact</a>
+            <nav class="navTwo">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html">Contact</a>
             </nav>
         </footer>
     </div><!-- container -->        
