added footer and contact info on contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="wrapper">
-    
+
     <header>
 
         <div class="mainLogo">
@@ -52,6 +52,15 @@
       </div>
 
     </div>
+
+    <footer>
+        <address>
+            Name: nameRightHere<br>
+            Address: addressRightHere<br>
+            Website: <a href="#">website</a><br>
+            Phone: (555) 555-555<br>
+        </address>
+    </footer>
 
 </body>
 </html>
